@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-11-26T02:01:09Z",
-  "count" : 21,
-  "count_minmax" : [ 21, 21 ],
-  "count_decinc" : [ -0, +21 ],
-  "uniques" : 1,
-  "uniques_minmax" : [ 1, 1 ],
-  "uniques_decinc" : [ -0, +1 ]
+  "timestamp" : "2025-11-27T01:58:37Z",
+  "count" : 122,
+  "count_minmax" : [ 21, 122 ],
+  "count_decinc" : [ -0, +122 ],
+  "uniques" : 2,
+  "uniques_minmax" : [ 1, 2 ],
+  "uniques_decinc" : [ -0, +2 ]
 }
