@@ -1,8 +1,8 @@
 {
   "timestamp" : "2025-11-27T01:58:37Z",
-  "count" : 54,
-  "count_minmax" : [ 21, 121 ],
-  "count_decinc" : [ -67, +121 ],
+  "count" : 23,
+  "count_minmax" : [ 23, 23 ],
+  "count_decinc" : [ -0, +23 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
