@@ -1,15 +1,10 @@
 {
-  "count": 1653,
-  "uniques": 3,
+  "count": 1664,
+  "uniques": 4,
   "clones": [
     {
-      "timestamp": "2025-11-12T00:00:00Z",
-      "count": 46,
-      "uniques": 1
-    },
-    {
       "timestamp": "2025-11-13T00:00:00Z",
-      "count": 121,
+      "count": 54,
       "uniques": 1
     },
     {
@@ -74,7 +69,12 @@
     },
     {
       "timestamp": "2025-11-26T00:00:00Z",
-      "count": 21,
+      "count": 122,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-11-27T00:00:00Z",
+      "count": 23,
       "uniques": 1
     }
   ]
