@@ -1,3 +1,12 @@
+2025-11-27T01:58:37Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19722783410 # 821
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-27
+* notice: last 14d: unq all: 4 1664
+* notice: prev accum: outdated-unq outdated-all / unq all: 2934 275444 / 2951 277172
+* notice: next accum: outdated-unq outdated-all / unq all: 2935 275565 / 2953 277296
+* notice: prev exec diff / last date diff / accum: unq all: +2 +124 -0 -67 / +1 +23 -0 -0 / 1 23
+* notice: removed / changed dates: [2025-11-12] / [2025-11-13 2025-11-26 2025-11-27]
+
 2025-11-26T02:01:09Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/19690040783 # 820
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2025-11-26
